# geometry

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust-clippy.yml  tests.yml
src/: circles.rs  cp437.rs  direction.rs  fov.rs  lib.rs  point.rs  two_dim_direction.rs
