[package]
name = "geometry"
version = "0.1.0"
edition = "2021"

[dependencies]
vek = { version = "0.16.1", default-features = false }
line_drawing = { version = "1.0" }
rand = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true }

[features]
default = ["rand", "serde"]
rand = ["dep:rand"]
serde = ["dep:serde"]
