[package]
name = "roguemetry"
description = "Geometry utils for 2D tile-based games"
license = "MIT"
homepage = "https://github.com/Tairesh/roguemetry"
repository = "https://github.com/Tairesh/roguemetry"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
vek = { version = "0.15.10", default-features = false }
line_drawing = { version = "1.0" }
rand = { version = "0.9", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = ["rand", "serde"]
rand = ["dep:rand"]
serde = ["dep:serde"]
